--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "npm run build && node ./deploy.js"
   },
   "dependencies": {
     "axios": "^0.20.0",
@@ -25,6 +26,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.14.1",
+    "node-ssh": "^10.0.2",
     "sass-loader": "^10.0.1",
     "vue-template-compiler": "^2.6.11"
   },
