--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.27.0",
     "vant": "^2.10.3",
     "vue": "^2.6.11",
+    "vue-cookies": "^1.7.4",
     "vue-router": "^3.2.0",
     "vuex": "^3.5.1"
   },
